k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wiki-rog
  labels:
    app.kubernetes.io/part-of: wiki-rog
